syntax = "proto3";
option csharp_namespace = "MessageRouterService";
pakage MessageRouter;

message SendInputMessage
{
	guid id =1;
	string sender =2;
	string textmessage =3;
}
message GetResultMessage
{
	guid id =1;
	string engine =2 ;
	uint messagelength = 3;
	bool isvalid =4;
}

service ProcessInputMessage{
	rpc Introduce(stream SendInputMessage) returns (stream GetResultMessage)
}
/*
service FetchResultMessage
{
	rpc Introduce (stream GetResultMessage) returns (stream SendInputMessage)
}
*/
